--- a/math/octave/octave/Makefile.in
+++ b/math/octave/octave/Makefile.in
@@ -22,7 +22,7 @@ DISTFILES = COPYING ChangeLog Makefile.in Makeconf.in NEWS README \
 DISTDIRS = dld
 
 # Subdirectories to run make in for the primary targets.
-SUBDIRS = libcruft liboctave @DLD_DIR@ info readline src doc scripts 
+SUBDIRS = libcruft liboctave @DLD_DIR@ info src doc scripts 
 
 # Subdirectories to run `make dist' in
 DISTSUBDIRS = $(SUBDIRS) test
@@ -56,10 +56,6 @@ dld:
 info:
 	cd info ; $(MAKE) all
 .PHONY: info
-
-readline:
-	cd readline ; $(MAKE) all
-.PHONY: readline
 
 src:
 	cd src ; $(MAKE) all
