--- a/net/dgd/src/ed/Makefile
+++ b/net/dgd/src/ed/Makefile
@@ -1,7 +1,7 @@
 #
 # Makefile for editor, part of DGD.
 #
-HOST=	SUNOS4
+HOST=	BSD386
 DEFINES=-D$(HOST)
 DEBUG=	-g -DDEBUG
 CCFLAGS=$(DEFINES) $(DEBUG)
