Install info files too.

--- a/x11/gnuplot/docs/Makefile.in
+++ b/x11/gnuplot/docs/Makefile.in
@@ -24,6 +24,7 @@ exec_prefix = $(prefix)
 bindir = $(exec_prefix)/bin
 datadir = $(prefix)/lib
 mandir = $(prefix)/man
+infodir = $(prefix)/info
 
 INSTALL = @INSTALL@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
@@ -126,8 +127,9 @@ checkdoc: checkdoc.o
 	$(CC) -o $@ checkdoc.o $(LDFLAGS) $(LIBS)
 
 # For Unix and MSDOS only
-install: gnuplot.gih
+install: gnuplot.gih gnuplot.info
 	$(INSTALL_DATA) gnuplot.gih $(datadir)/gnuplot.gih
+	$(INSTALL_DATA) gnuplot.info* $(infodir)
 
 uninstall:
 	rm -f $(datadir)/gnuplot.gih
