Use libreadline instead of readline.c (old!) if present. Added package target.

--- a/x11/gnuplot/Makefile.in
+++ b/x11/gnuplot/Makefile.in
@@ -22,7 +22,7 @@ INSTALL_DATA = @INSTALL_DATA@
 
 CC     = @CC@
 DEFS   = @DEFS@ @X_INCLUDES@
-CFLAGS = -O2
+CFLAGS = -O2 -m486 -pipe
 LDFLAGS = -s
 
 # Additional devices you can add.
@@ -44,6 +44,10 @@ TERMFLAGS =
 TERMLIBS = 
 
 LIBS = $(TERMLIBS) @X_LIBRARIES@ -lm @LIBS@
+
+# These are set to readline.[co] when configure can't find libreadline
+RL_C = @RL_C@
+RL_O = @RL_O@
 
 # Where to send email about bugs and comments (locally)
 EMAIL=bug-gnuplot@dartmouth.edu
@@ -102,7 +106,7 @@ LASERGNU = @LASERGNU@
 ####################################################################
 # List of object files except version.o
 OBJS = bitmap.o command.o contour.o eval.o graphics.o graph3d.o help.o \
-       internal.o misc.o parse.o plot.o readline.o scanner.o \
+       internal.o misc.o parse.o plot.o $(RL_O) scanner.o \
        setshow.o specfun.o standard.o term.o util.o gnubin.o binary.o
 
 ####################################################################
@@ -112,7 +116,7 @@ DIRS = term demo docs docs/latextut
 
 CSOURCE1 = bf_test.c binary.c command.c setshow.c
 CSOURCE2 = help.c gnubin.c graphics.c graph3d.c internal.c
-CSOURCE3 = misc.c eval.c parse.c plot.c readline.c scanner.c standard.c
+CSOURCE3 = misc.c eval.c parse.c plot.c $(RL_C) scanner.c standard.c
 CSOURCE4 = bitmap.c term.c util.c version.c
 CSOURCE5 = term/ai.trm term/amiga.trm term/aed.trm term/atari.trm \
 	term/bigfig.trm term/cgi.trm term/corel.trm \
@@ -283,3 +287,7 @@ realclean: distclean
 dist: $(ETC) $(SOURCES) $(PC) $(DEMOS) $(BETA) $(DOCS)
 	$(TAR) cvf /tmp/gnuplot.tar $(ETC) $(SOURCES) $(PC)\
 	     $(DEMOS) $(BETA) $(DOCS)
+
+package: install pkg/PLIST pkg/DESC pkg/ONELINE pkg/PREREQ
+	pkg_create -c pkg/ONELINE -d pkg/DESC -f pkg/PLIST -r pkg/PREREQ \
+	  gnuplot_bin
