--- a/x11/gnuplot/configure.in
+++ b/x11/gnuplot/configure.in
@@ -67,6 +67,12 @@ dnl Libraries.
 dnl -lsocket is needed on SVR4.
 AC_HAVE_LIBRARY(socket, LIBS="$LIBS -lsocket")
 
+dnl use readline library if it exists
+dnl not sure what other library it requires---it's -ltermcap on FreeBSD
+AC_HAVE_LIBRARY(readline, LIBS="$LIBS -lreadline -ltermcap", RL_C=readline.c RL_O=readline.o)
+AC_SUBST(RL_C)
+AC_SUBST(RL_O)
+
 dnl How do we detect the Ultrix X libraries?
 dnl Or is it really a server (run-time) problem?
 dnl FIXME AC_DEFINE(ULTRIX_KLUDGE)
