Changed make all target to not depend on top.local.h, since this is pre-defined.

--- a/util/top/Makefile
+++ b/util/top/Makefile
@@ -64,7 +64,8 @@ LIBS = -lutil
 CFLAGS =  $(CDEFS)
 LINTFLAGS = -x $(CDEFS)
 
-all: Makefile top.local.h top
+#all: Makefile top.local.h top
+all: top
 
 Makefile: Makefile.X
 	@echo 'You need to run the script "Configure" before running "make".'
