--- a/print/texk/web2c-6.1/web2c/man/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/man/Makefile.in
@@ -205,7 +205,7 @@ spell: $(manfiles) manpages.sok
 
 
 install install-data: all
-	$(srcdir)/../../mkdirchain $(mandir)
+	$(SHELL) $(srcdir)/../../mkdirchain $(mandir)
 	for nameone in $(manfiles); do					\
           name=`basename $${nameone} .1`;				\
           $(INSTALL_DATA) $${name}.1 $(mandir)/$${name}.$(manext);	\
