--- a/print/texk/web2c-6.1/web2c/tex/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/tex/Makefile.in
@@ -275,7 +275,8 @@ c-sources: texd.h patgen.c
 install: install-exec install-data
 
 install-exec: all
-	$(srcdir)/../../mkdirchain $(texpooldir) $(texdatadir) $(fontdir)
+	$(SHELL) $(srcdir)/../../mkdirchain $(texpooldir) $(texdatadir) \
+		$(fontdir)
 	for p in $(program); do $(INSTALL_PROGRAM) $$p $(bindir)/$$p; done
 
 # The dependency should really be tex.pool, but can't do that in suffix rules.
