--- a/print/texk/web2c-6.1/Makefile.in
+++ b/print/texk/web2c-6.1/Makefile.in
@@ -187,7 +187,7 @@ distclean realclean::
 # Unconditionally recopy the texmf directory
 do-texmf:
 	if [ ! -f texmf-stamp -o ! -d $(texmf_prefix) ]; then \
-		./mkdirchain $(texmf_prefix); \
+		$(SHELL) ./mkdirchain $(texmf_prefix); \
 		cp -R ../texmf/* $(texmf_prefix) && \
 		touch texmf-stamp; \
 	fi
