Automatically generate main Makefile, in addition to all the sub-Makefiles. (Self-documenting)

--- a/x11/iv/makefile
+++ b/x11/iv/makefile
@@ -4,7 +4,7 @@ all: src/Makefile
 	@$(MAKE) $(.MAKEFLAGS) -f Makefile 'CPU=$(CPU)'
 
 # simple but brutal. Will not install to multiple destinations simultaneously.
-install:
+install: Makefile
 	@rm -rf installed ${DESTDIR}/usr/local/interviews
 	@mkdir -p ${DESTDIR}/usr/local/interviews
 	@ln -s ${DESTDIR}/usr/local/interviews installed
@@ -12,8 +12,12 @@ install:
 package: all install
 	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST iv_bin
 
-src/Makefile:
+src/Makefile: Makefile
 	@$(MAKE) Makefiles
+
+Makefile:
+	imake -T "InterViews/template" -I./src/config \
+		-I/usr/X386/lib/X11/config -DTOPDIR=. -DCURDIR=.
 
 .DEFAULT: src/Makefile
 	@$(MAKE) $(.MAKEFLAGS) -f Makefile 'CPU=$(CPU)' $@
