--- a/db/ingres/configure.in
+++ b/db/ingres/configure.in
@@ -29,11 +29,13 @@ AC_HEADER_EGREP(sys_errlist, stdio.h, AC_DEFINE(DECLARED_SYS_ERRLIST))
 
 AC_HAVE_FUNCS(strerror)
 AC_HAVE_FUNCS(strcspn)
+AC_HAVE_FUNCS(setpwfile)
 
 AC_OUTPUT(
 src/conf/Makefile
 src/ctlmod/Makefile
 src/dbu/Makefile
+src/decomp/Makefile
 src/equel/Makefile
 src/h/Makefile
 src/libq/Makefile
