Add y.tab.h edit vers.c clean rule, as this is the file that does the cleaning.

--- a/net/wu-ftpd/src/makefiles/Makefile.gen
+++ b/net/wu-ftpd/src/makefiles/Makefile.gen
@@ -36,7 +36,7 @@ vers.o: ftpd.c ftpcmd.y
 
 clean:
 	rm -f ${OBJS} ftpd ftpcmd.c ftpshut ftpshut.o ftpcount ftpcount.o
-	rm -f core index index.o ckconfig ckconfig.o
+	rm -f core index index.o ckconfig ckconfig.o y.tab.h edit vers.c
 
 cleandir: clean
 	rm -f tags .depend
