Add new os ``fbs'' (seems the script wants a 3 letter os name, so I guess I am stuck with this for now.)
Remove src/{Makefile,config.h} and support/Makefile before attempting
to link to the ``os'' version specific files, this cleans up warning
when doing multiple make all from the top level.

Remove bin/{ftpwho,ckconfig} for the same reason.

Fix tabbing error and fix if for link creation from src/ftpcount to bin/.

--- a/net/wu-ftpd/build
+++ b/net/wu-ftpd/build
@@ -8,6 +8,7 @@ Usage: build <make-options> <target-platform>
   aix    : IBM AIX
   bsd    : BSDI bsd/386
   dyn    : Dynix
+  fbs    : FreeBSD (tested on 1.1 and 1.1.5)
   hpx    : HP-UX
   lnx    : Linux (tested on 0.99p8)
   nx2    : NeXTstep 2.x
@@ -68,9 +69,11 @@ case $maketarget in
         echo ''
         echo "Linking Makefiles."
 		cd src
+		rm -f Makefile config.h
 		ln makefiles/Makefile.$maketarget Makefile
 		ln config/config.$maketarget config.h
 		cd ../support
+		rm -f Makefile
 		ln makefiles/Makefile.$maketarget Makefile
         echo ''
         echo "Making support library."
@@ -92,12 +95,12 @@ case $maketarget in
         cd ..
         if [ ! -d bin ] ;  then    mkdir bin;        fi
         cd bin
-        rm -f ftpd ftpcount ftpshut
+        rm -f ftpd ftpcount ftpshut ftpwho ckconfig
         if [ -s ../src/ftpd ] ;      then ln ../src/ftpd  ftpd      ; fi
         if [ -s ../src/ftpcount ] ;  then ln ../src/ftpcount ftpcount ; fi
         if [ -s ../src/ftpshut ] ;   then ln ../src/ftpshut ftpshut    ; fi
-        if [ -s ../src/ftpshut ] ;   then ln ../src/ftpcount ftpwho    ; fi
-		if [ -s ../src/ckconfig ] ;  then ln ../src/ckconfig ckconfig  ; fi
+        if [ -s ../src/ftpcount ] ;  then ln ../src/ftpcount ftpwho    ; fi
+        if [ -s ../src/ckconfig ] ;  then ln ../src/ckconfig ckconfig  ; fi
         cd ..
         echo ''
         echo "Links to executables are in bin directory:"
