Added `package' target - hop i got this one right...

--- a/util/cpm/Makefile
+++ b/util/cpm/Makefile
@@ -2,8 +2,13 @@
 #
 DESTDIR=
 
+package: pkg_bin
+
 all:
 	cd src; make ${MFLAGS}
+
+pkg_bin: install
+        pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST cpm_bin
 
 install: all
 	cd src; make ${MFLAGS} DESTDIR=${DESTDIR} install
