Update to version 2.3

--- a/net/lynx/lynx.cfg
+++ b/net/lynx/lynx.cfg
@@ -1,6 +1,6 @@
 # lynx.cfg file.
 # The default placement for this file is /usr/local/lib/lynx.cfg (UNIX)
-#                                     or sys$public:lynx.cfg (VMS)
+#                                     or Lynx_Dir:lynx.cfg (VMS)
 #
 # Definition pairs are of the form  VARIABLE:DEFINITION
 # NO spaces are allowed between the pair items.
@@ -53,6 +53,7 @@ DEFAULT_INDEX_FILE:http://www.ncsa.uiuc.edu/SDG/Software/Mosaic/MetaIndex.html
 #    ISO Latin 1
 #    DEC Multinational
 #    IBM PC character set
+#    NeXT character set
 #    7 bit approximations
 CHARACTER_SET:ISO Latin 1
  
@@ -155,7 +156,10 @@ DEFAULT_USER_MODE:NOVICE
 #
 #    <printer name> is the name that the user will see
 # <printer command> is the command line arguments for printing a file
-#		    the %s will be replaced with the file being printed
+#		    the %s will be replaced with the file being printed.
+#                   If a second %s is given it will be replaced by a
+#                   suggested filename that is prettier than the tempfile
+#                   name given in the first %s
 #  <printer option> specifies whether the printer should be disabled for
 #		    users without printing options.  The options are
 #		    TRUE or FALSE;
@@ -177,8 +181,9 @@ DEFAULT_USER_MODE:NOVICE
 # check out the lpansi program in utils/ for printing on vt100
 # attached printers.
 #PRINTER:Use vt100 print sequence to print from your local terminal:lpansi %s:TRUE
-
-PRINTER:Specify your own print command:echo -n "Enter a print command\: "; read word; sh -c "$word %s":FALSE
+# don't use the following printer on anonymous accounts since
+# allowing shell input is very dangerous
+#PRINTER:Specify your own print command:echo -n "Enter a print command\: "; read word; sh -c "$word %s":FALSE
 
 
 # Downloader definitions
@@ -196,6 +201,9 @@ PRINTER:Specify your own print command:echo -n "Enter a print command\: "; read 
 #    <downloader name> is the name that the user will see
 # <downloader command> is the command line arguments for printing a file
 #                      the %s will be replaced with the file being printed
+#                      If a second %s is given it will be replaced by a
+#                      suggested filename that is prettier than the tempfile
+#                      name given in the first %s
 #  <downloader option> specifies whether the downloader should be disabled for
 #                      anonymous users.  The options are
 #                      TRUE or FALSE;
@@ -211,6 +219,84 @@ PRINTER:Specify your own print command:echo -n "Enter a print command\: "; read 
 #    examples
 #DOWNLOADER:Use Kermit to download to the local terminal:kermit -i -s %s:TRUE
 #DOWNLOADER:Use Zmodem to download to the local terminal:sz %s:TRUE
+
+#UPLOADER: Use Kermit to upload from your computer: kermit -i -r -a %s:TRUE
+
+# MIME types and viewers!
+#
+# file extensions may be assigned to MIME types using
+# the SUFFIX: definition.  
+#
+# The SUFFIX definition takes the form of:
+#    SUFFIX:<file extension>:<mime type>
+# for instance the following definition maps the
+# extension ".gif" to the mime type "image/gif"
+#    SUFFIX:.gif:image/gif
+#
+# file suffixes are case INsensitive!
+#
+# The suffix definitions listed here in the default lynx.cfg file
+# are pre-defined within the Lynx code, but may be redefined below.
+
+#SUFFIX:.ps:application/postscript
+#SUFFIX:.eps:application/postscript
+#SUFFIX:.ai:application/postscript
+#SUFFIX:.rtf:application/x-rtf
+#SUFFIX:.snd:audio/basic
+#SUFFIX:.gif:image/gif
+#SUFFIX:.rgb:image/x-rgb
+#SUFFIX:.pict:image/x-pict
+#SUFFIX:.xbm:image/x-xbm
+#SUFFIX:.tiff:image/x-tiff
+#SUFFIX:.jpg:image/jpeg
+#SUFFIX:.jpeg:image/jpeg
+#SUFFIX:.mpg:video/mpeg
+#SUFFIX:.mpeg:video/mpeg
+#SUFFIX:.mov:video/quicktime
+#SUFFIX:.hqx:application/octet-stream
+#SUFFIX:.bin:application/octet-stream
+#SUFFIX:.exe:application/octet-stream
+#SUFFIX:.tar:application/octet-stream
+#SUFFIX:.Z:application/octet-stream
+#SUFFIX:.gz:application/octet-stream
+#SUFFIX:.zip:application/octet-stream
+#SUFFIX:.lzh:application/octet-stream
+#SUFFIX:.lha:application/octet-stream
+#SUFFIX:.dms:application/octet-stream
+
+# MIME types may be assigned to external viewers using
+# the VIEWER definition.
+#
+# Note: if you do not define a viewer to a new MIME type
+#       that you assigned above then it will be saved to
+#       disk by default.
+#
+# The VIEWER definition takes the form of:
+#    VIEWER:<mime type>:<viewing command>[:environment]
+#      where -mime type is the MIME content type of the file
+#	     -viewing command is a system command that can be
+#             used to display the file where "%s" is replaced
+#             within the command with the physical filename
+#             (i.e. "xv %s" becomes "xv /tmp/tempgiffile")
+#            -environment is optional.  The only valid keywords
+#             are currently XWINDOWS and NON_XWINDOWS.  If the XWINDOWS 
+#             environment is specified then the viewer will only be defined
+#             when the user has the environment variable DISPLAY
+#             defined.  If the NON_XWINDOWS environment is specified
+#             the specified viewer will only be defined when the user
+#             DOES NOT have the environment variable DISPLAY defined.
+#  examples:
+#		VIEWER:image/gif:xv %s:XWINDOWS
+#               VIEWER:image/gif:ascii-view %s:NON_XWINDOWS
+#               VIEWER:application/start-elm:elm
+
+VIEWER:application/postscript:ghostview %s&:XWINDOWS
+VIEWER:image/gif:xv %s&:XWINDOWS
+VIEWER:image/x-xbm:xv %s&:XWINDOWS
+VIEWER:image/x-rgb:xv %s&:XWINDOWS
+VIEWER:image/x-tiff:xv %s&:XWINDOWS
+VIEWER:image/jpeg:xv %s&:XWINDOWS
+VIEWER:video/mpeg:mpeg_play %s &:XWINDOWS
 
 
 # Key remapping definitions!
@@ -265,8 +351,8 @@ PRINTER:Specify your own print command:echo -n "Enter a print command\: "; read 
 #KEYMAP:0x00:DOWN_LINK	# Move to the link below
 #KEYMAP:0x00:RIGHT_LINK	# Move to the link to the right
 #KEYMAP:0x00:LEFT_LINK	# Move to the link to the left
-#KEYMAP:0x00:HISTORY	# Show the history list
-#KEYMAP:0x00:HISTORY	# Show the history list
+#KEYMAP:0x7f:HISTORY    # Show the history list
+#KEYMAP:0x08:HISTORY    # Show the history list
 #KEYMAP:0x83:PREV_DOC	# Return to the previous document
 #KEYMAP:0x82:ACTIVATE	# Select the current link
 #KEYMAP:0x89:ACTIVATE   # Function key - Select the current link
